map hosts by fqdn/dns names

--- a/asf_test.cfg
+++ b/asf_test.cfg
@@ -54,7 +54,7 @@
                             "hosts": [
                                 {
                                     "username": "root", 
-                                    "url": "http://10.223.75.20", 
+                                    "url": "http://acs-qa-h20", 
                                     "password": "password"
                                 }
                             ], 
