--- a/kvm.cfg
+++ b/kvm.cfg
@@ -1,13 +1,14 @@
 {
     "zones": [
         {
-            "name": "Sandbox-KVM", 
+            "name": "z0", 
             "guestcidraddress": "10.1.1.0/24", 
             "dns1": "10.223.75.10", 
+            "vlan": "2480-2559", 
             "physical_networks": [
                 {
                     "broadcastdomainrange": "Zone", 
-                    "name": "Sandbox-pnet", 
+                    "name": "z0-pnet", 
                     "traffictypes": [
                         {
                             "typ": "Guest"
@@ -33,8 +34,15 @@
             ], 
             "ipranges": [
                 {
+                    "startip": "10.223.155.2", 
+                    "endip": "10.223.155.128", 
+                    "netmask": "255.255.255.128", 
+                    "vlan": "550", 
+                    "gateway": "10.223.155.1"
+                }, 
+                {
                     "startip": "10.223.158.2", 
-                    "endip": "10.223.158.20", 
+                    "endip": "10.223.158.128", 
                     "netmask": "255.255.255.128", 
                     "vlan": "580", 
                     "gateway": "10.223.158.1"
@@ -43,13 +51,53 @@
             "networktype": "Advanced", 
             "pods": [
                 {
-                    "endip": "10.223.78.150", 
-                    "name": "POD0", 
+                    "endip": "10.223.75.127", 
+                    "name": "z0p0", 
+                    "startip": "10.223.75.2", 
+                    "netmask": "255.255.255.128", 
+                    "clusters": [
+                        {
+                            "clustername": "z0p0c0", 
+                            "hypervisor": "KVM", 
+                            "hosts": [
+                                {
+                                    "username": "root", 
+                                    "url": "http://acs-qa-h11", 
+                                    "password": "password"
+                                }, 
+                                {
+                                    "username": "root", 
+                                    "url": "http://acs-qa-h23", 
+                                    "password": "password"
+                                }
+                            ], 
+                            "clustertype": "CloudManaged", 
+                            "primaryStorages": [
+                                {
+                                    "url": "nfs://nfs2.lab.vmops.com:/export/home/automation/asf/primary", 
+                                    "name": "z0p0c0ps0"
+                                }, 
+                                {
+                                    "url": "nfs://nfs2.lab.vmops.com:/export/home/automation/asf/primary1", 
+                                    "name": "z0p0c0ps1"
+                                }, 
+                                {
+                                    "url": "nfs://nfs2.lab.vmops.com:/export/home/automation/asf/primary2", 
+                                    "name": "z0p1c0ps0"
+                                }
+                            ]
+                        }
+                    ], 
+                    "gateway": "10.223.75.1"
+                }, 
+                {
+                    "endip": "10.223.78.254", 
+                    "name": "z0p1", 
                     "startip": "10.223.78.130", 
                     "netmask": "255.255.255.128", 
                     "clusters": [
                         {
-                            "clustername": "C0", 
+                            "clustername": "z0p1c0", 
                             "hypervisor": "KVM", 
                             "hosts": [
                                 {
@@ -58,13 +106,7 @@
                                     "password": "password"
                                 }
                             ], 
-                            "clustertype": "CloudManaged", 
-                            "primaryStorages": [
-                                {
-                                    "url": "nfs://nfs2.lab.vmops.com/export/home/automation/asf/primary", 
-                                    "name": "PS0"
-                                }
-                            ]
+                            "clustertype": "CloudManaged"
                         }
                     ], 
                     "gateway": "10.223.78.129"
@@ -73,9 +115,85 @@
             "internaldns1": "10.223.75.10", 
             "secondaryStorages": [
                 {
-                    "url": "nfs://nfs2.lab.vmops.com/export/home/automation/asf/secondary"
+                    "url": "nfs://nfs2.lab.vmops.com:/export/home/automation/asf/secondary"
+                }, 
+                {
+                    "url": "nfs://nfs2.lab.vmops.com:/export/home/automation/asf/secondary2"
                 }
             ]
+        }, 
+        {
+            "name": "z1", 
+            "guestcidraddress": "10.1.1.0/24", 
+            "dns1": "10.223.75.10", 
+            "vlan": "675-679", 
+            "physical_networks": [
+                {
+                    "broadcastdomainrange": "Zone", 
+                    "name": "z1-pnet", 
+                    "traffictypes": [
+                        {
+                            "typ": "Guest"
+                        }, 
+                        {
+                            "typ": "Management"
+                        }, 
+                        {
+                            "typ": "Public"
+                        }
+                    ], 
+                    "providers": [
+                        {
+                            "broadcastdomainrange": "ZONE", 
+                            "name": "VirtualRouter"
+                        }, 
+                        {
+                            "broadcastdomainrange": "ZONE", 
+                            "name": "VpcVirtualRouter"
+                        }
+                    ]
+                }
+            ], 
+            "ipranges": [
+                {
+                    "startip": "10.223.158.130", 
+                    "endip": "10.223.158.254", 
+                    "netmask": "255.255.255.128", 
+                    "vlan": "581", 
+                    "gateway": "10.223.158.129"
+                }
+            ], 
+            "networktype": "Advanced", 
+            "pods": [
+                {
+                    "endip": "10.223.90.128", 
+                    "name": "z1p0", 
+                    "startip": "10.223.90.2", 
+                    "netmask": "255.255.255.128", 
+                    "clusters": [
+                        {
+                            "clustername": "z1p0c0", 
+                            "hypervisor": "KVM", 
+                            "hosts": [
+                                {
+                                    "username": "root", 
+                                    "url": "http://acs-qa-h21", 
+                                    "password": "password"
+                                }
+                            ], 
+                            "clustertype": "CloudManaged", 
+                            "primaryStorages": [
+                                {
+                                    "url": "nfs://nfs2.lab.vmops.com:/export/home/automation/asf/primary3", 
+                                    "name": "z1p0c0ps0"
+                                }
+                            ]
+                        }
+                    ], 
+                    "gateway": "10.223.90.1"
+                }
+            ], 
+            "internaldns1": "10.223.75.10"
         }
     ], 
     "dbSvr": {
@@ -126,7 +244,7 @@
         }, 
         {
             "name": "guest.domain.suffix", 
-            "value": "sandbox.xen"
+            "value": "sandbox.kvm"
         }, 
         {
             "name": "expunge.delay", 
