changes to deployment configs

--- a/kvm.cfg
+++ b/kvm.cfg
@@ -80,10 +80,6 @@
                                 {
                                     "url": "nfs://nfs2.lab.vmops.com:/export/home/automation/asf/primary1", 
                                     "name": "z0p0c0ps1"
-                                }, 
-                                {
-                                    "url": "nfs://nfs2.lab.vmops.com:/export/home/automation/asf/primary2", 
-                                    "name": "z0p1c0ps0"
                                 }
                             ]
                         }
@@ -106,7 +102,13 @@
                                     "password": "password"
                                 }
                             ], 
-                            "clustertype": "CloudManaged"
+                            "clustertype": "CloudManaged", 
+                            "primaryStorages": [
+                                {
+                                    "url": "nfs://nfs2.lab.vmops.com:/export/home/automation/asf/primary2", 
+                                    "name": "z0p1c0ps0"
+                                }
+                            ]
                         }
                     ], 
                     "gateway": "10.223.78.129"
