--- a/xen.cfg
+++ b/xen.cfg
@@ -118,9 +118,6 @@
             "secondaryStorages": [
                 {
                     "url": "nfs://nfs2.lab.vmops.com:/export/home/automation/asf/secondary"
-                }, 
-                {
-                    "url": "nfs://nfs2.lab.vmops.com:/export/home/automation/asf/secondary2"
                 }
             ]
         }, 
@@ -195,7 +192,12 @@
                     "gateway": "10.223.90.1"
                 }
             ], 
-            "internaldns1": "10.223.75.10"
+            "internaldns1": "10.223.75.10", 
+            "secondaryStorages": [
+                {
+                    "url": "nfs://nfs2.lab.vmops.com:/export/home/automation/asf/secondary2"
+                }
+            ]
         }
     ], 
     "dbSvr": {
