--- a/xen.properties
+++ b/xen.properties
@@ -80,21 +80,21 @@ z0p1c0ps0.primary.pool=nfs://nfs2.lab.vmops.com:/export/home/automation/asf/prim
 z0.secondary.pool=nfs://nfs2.lab.vmops.com:/export/home/automation/asf/secondary
 
 #Zone 2
-z1.zone.vlan=675-679
+#z1.zone.vlan=2300-2349
 
-z1p0.private.gateway=10.223.90.1
-z1p0.private.pod.startip=10.223.90.2
-z1p0.private.pod.endip=10.223.90.127
-z1p0.private.netmask=255.255.255.128
+#z1p0.private.gateway=10.223.90.1
+#z1p0.private.pod.startip=10.223.90.2
+#z1p0.private.pod.endip=10.223.90.127
+#z1p0.private.netmask=255.255.255.128
 
-z1p0.public.gateway=10.223.158.129
-z1p0.public.vlan.startip=10.223.158.130
-z1p0.public.vlan.endip=10.223.158.254
-z1p0.public.netmask=255.255.255.128
-z1p0.public.vlan=581
+#z1p0.public.gateway=10.223.158.129
+#z1p0.public.vlan.startip=10.223.158.130
+#z1p0.public.vlan.endip=10.223.158.254
+#z1p0.public.netmask=255.255.255.128
+#z1p0.public.vlan=581
 
-z1p0c0h0.host=acs-qa-h21
+#z1p0c0h0.host=acs-qa-h21
 
-z1p0c0ps0.primary.pool=nfs://nfs2.lab.vmops.com:/export/home/automation/asf/primary3
+#z1p0c0ps0.primary.pool=nfs://nfs2.lab.vmops.com:/export/home/automation/asf/primary3
 
-z1.secondary.pool=nfs://nfs2.lab.vmops.com:/export/home/automation/asf/secondary2
+#z1.secondary.pool=nfs://nfs2.lab.vmops.com:/export/home/automation/asf/secondary2
