--- a/kvm.cfg
+++ b/kvm.cfg
@@ -3,6 +3,7 @@
         {
             "name": "z0", 
             "guestcidraddress": "10.1.1.0/24", 
+            "dns2": "10.223.78.2", 
             "dns1": "10.223.75.10", 
             "vlan": "2480-2559", 
             "physical_networks": [
@@ -115,6 +116,7 @@
                 }
             ], 
             "internaldns1": "10.223.75.10", 
+            "internaldns2": "10.223.78.130", 
             "secondaryStorages": [
                 {
                     "url": "nfs://nfs2.lab.vmops.com:/export/home/automation/asf/secondary"
@@ -124,6 +126,7 @@
         {
             "name": "z1", 
             "guestcidraddress": "10.1.1.0/24", 
+            "dns2": "10.223.78.2", 
             "dns1": "10.223.75.10", 
             "vlan": "2300-2349", 
             "physical_networks": [
@@ -193,6 +196,7 @@
                 }
             ], 
             "internaldns1": "10.223.75.10", 
+            "internaldns2": "10.223.78.130", 
             "secondaryStorages": [
                 {
                     "url": "nfs://nfs2.lab.vmops.com:/export/home/automation/asf/secondary2"
