--- a/xen.properties
+++ b/xen.properties
@@ -33,7 +33,10 @@ default.page.size=10000
 check.pod.cidrs=true
 secstorage.allowed.internal.sites=10.223.0.0/16
 [environment]
-dns=10.223.75.10
+dns1=10.223.75.10
+dns2=10.223.78.2
+internal_dns1=10.223.75.10
+internal_dns2=10.223.78.130
 mshost=10.223.75.41
 mysql.host=10.223.75.41
 mysql.cloud.user=cloud
