changes to configs

--- a/kvm.properties
+++ b/kvm.properties
@@ -31,73 +31,53 @@ instance.name=QA
 direct.agent.load.size=1000
 default.page.size=10000
 check.pod.cidrs=true
-secstorage.allowed.internal.sites=10.223.0.0/16
+secstorage.allowed.internal.sites=10.208.0.0/22
 [environment]
 dns1=8.8.8.8
 dns2=8.8.8.8
-internal_dns1=10.223.110.254
-internal_dns2=10.223.110.254
-mshost=10.223.75.41
-mysql.host=10.223.75.41
+internal_dns1=10.208.8.5
+internal_dns2=10.208.8.5
+mshost=10.208.75.41
+mysql.host=10.208.75.41
 mysql.cloud.user=cloud
 mysql.cloud.passwd=cloud
 [cloudstack]
 hypervisor=KVM
-host.password=password
+host.password=vmops.com
 
 #Zone 1
-z0.zone.vlan=2480-2559
+z0.zone.vlan=2001-2050
 
-z0p0.private.gateway=10.223.75.1
-z0p0.private.pod.startip=10.223.75.2
-z0p0.private.pod.endip=10.223.75.127
-z0p0.private.netmask=255.255.255.128
+z0p0.private.gateway=10.208.8.192
+z0p0.private.pod.startip=10.208.8.200
+z0p0.private.pod.endip=10.208.8.205
+z0p0.private.netmask=255.255.255.192
 
-z0p0.public.gateway=10.223.155.1
-z0p0.public.vlan.startip=10.223.155.2
-z0p0.public.vlan.endip=10.223.155.127
-z0p0.public.netmask=255.255.255.128
-z0p0.public.vlan=550
+z0p0.public.gateway=10.208.8.1
+z0p0.public.vlan.startip=10.208.8.206
+z0p0.public.vlan.endip=10.208.8.250
+z0p0.public.netmask=255.255.255.192
+z0p0.public.vlan=2000
 
-z0p0c0h0.host=acs-qa-h11
-z0p0c0h1.host=acs-qa-h23
+z0p0c0h0.host=apache-83-1
+z0p0c0h1.host=apache-83-2
 
-z0p0c0ps0.primary.pool=nfs://nfs2.lab.vmops.com:/export/home/automation/asf/primary
-z0p0c0ps1.primary.pool=nfs://nfs2.lab.vmops.com:/export/home/automation/asf/primary1
+z0p0c0ps0.primary.pool=nfs://nfs.fmt.vmops.com:/export/home/automation/acs/primary
+z0p0c0ps1.primary.pool=nfs://nfs.fmt.vmops.com:/export/home/automation/acs/primary1
 
-z0p1.private.gateway=10.223.78.1
-z0p1.private.pod.startip=10.223.78.2
-z0p1.private.pod.endip=10.223.78.127
-z0p1.private.netmask=255.255.255.128
+z0p1.private.gateway=10.208.8.64
+z0p1.private.pod.startip=10.208.8.70
+z0p1.private.pod.endip=10.208.8.75
+z0p1.private.netmask=255.255.255.192
 
-z0p1.public.gateway=10.223.158.1
-z0p1.public.vlan.startip=10.223.158.2
-z0p1.public.vlan.endip=10.223.158.127
-z0p1.public.netmask=255.255.255.128
-z0p1.public.vlan=580
+z0p1.public.gateway=10.208.8.1
+z0p1.public.vlan.startip=10.208.8.76
+z0p1.public.vlan.endip=10.208.8.100
+z0p1.public.netmask=255.255.255.192
+z0p1.public.vlan=2000
 
 z0p1c0h0.host=acs-qa-h20
 
-z0p1c0ps0.primary.pool=nfs://nfs2.lab.vmops.com:/export/home/automation/asf/primary2
+z0p1c0ps0.primary.pool=nfs://nfs.lab.vmops.com:/export/home/automation/acs/primary2
 
-z0.secondary.pool=nfs://nfs2.lab.vmops.com:/export/home/automation/asf/secondary
-
-#Zone 2
-z1.zone.vlan=2300-2349
-
-z1p0.private.gateway=10.223.78.129
-z1p0.private.pod.startip=10.223.78.130
-z1p0.private.pod.endip=10.223.78.254
-z1p0.private.netmask=255.255.255.128
-
-z1p0.public.gateway=10.223.158.129
-z1p0.public.vlan.startip=10.223.158.130
-z1p0.public.vlan.endip=10.223.158.254
-z1p0.public.netmask=255.255.255.128
-z1p0.public.vlan=581
-
-z1p0c0h0.host=acs-qa-h21
-
-z1p0c0ps0.primary.pool=nfs://nfs2.lab.vmops.com:/export/home/automation/asf/primary3
-
-z1.secondary.pool=nfs://nfs2.lab.vmops.com:/export/home/automation/asf/secondary2
+z0.secondary.pool=nfs://nfs.fmt.vmops.com:/export/home/automation/acs/secondary
