--- a/kvm.cfg
+++ b/kvm.cfg
@@ -5,7 +5,7 @@
             "guestcidraddress": "10.1.1.0/24", 
             "dns2": "8.8.8.8", 
             "dns1": "8.8.8.8", 
-            "vlan": "2480-2559", 
+            "vlan": "2001-2050", 
             "physical_networks": [
                 {
                     "broadcastdomainrange": "Zone", 
@@ -35,27 +35,27 @@
             ], 
             "ipranges": [
                 {
-                    "startip": "10.223.155.2", 
-                    "endip": "10.223.155.127", 
-                    "netmask": "255.255.255.128", 
-                    "vlan": "550", 
-                    "gateway": "10.223.155.1"
+                    "startip": "10.208.8.206", 
+                    "endip": "10.208.8.250", 
+                    "netmask": "255.255.255.192", 
+                    "vlan": "2000", 
+                    "gateway": "10.208.8.1"
                 }, 
                 {
-                    "startip": "10.223.158.2", 
-                    "endip": "10.223.158.127", 
-                    "netmask": "255.255.255.128", 
-                    "vlan": "580", 
-                    "gateway": "10.223.158.1"
+                    "startip": "10.208.8.76", 
+                    "endip": "10.208.8.100", 
+                    "netmask": "255.255.255.192", 
+                    "vlan": "2000", 
+                    "gateway": "10.208.8.1"
                 }
             ], 
             "networktype": "Advanced", 
             "pods": [
                 {
-                    "endip": "10.223.75.127", 
+                    "endip": "10.208.8.205", 
                     "name": "z0p0", 
-                    "startip": "10.223.75.2", 
-                    "netmask": "255.255.255.128", 
+                    "startip": "10.208.8.200", 
+                    "netmask": "255.255.255.192", 
                     "clusters": [
                         {
                             "clustername": "z0p0c0", 
@@ -63,35 +63,35 @@
                             "hosts": [
                                 {
                                     "username": "root", 
-                                    "url": "http://acs-qa-h11", 
-                                    "password": "password"
+                                    "url": "http://apache-83-1", 
+                                    "password": "vmops.com"
                                 }, 
                                 {
                                     "username": "root", 
-                                    "url": "http://acs-qa-h23", 
-                                    "password": "password"
+                                    "url": "http://apache-83-2", 
+                                    "password": "vmops.com"
                                 }
                             ], 
                             "clustertype": "CloudManaged", 
                             "primaryStorages": [
                                 {
-                                    "url": "nfs://nfs2.lab.vmops.com:/export/home/automation/asf/primary", 
+                                    "url": "nfs://nfs.fmt.vmops.com:/export/home/automation/acs/primary", 
                                     "name": "z0p0c0ps0"
                                 }, 
                                 {
-                                    "url": "nfs://nfs2.lab.vmops.com:/export/home/automation/asf/primary1", 
+                                    "url": "nfs://nfs.fmt.vmops.com:/export/home/automation/acs/primary1", 
                                     "name": "z0p0c0ps1"
                                 }
                             ]
                         }
                     ], 
-                    "gateway": "10.223.75.1"
+                    "gateway": "10.208.8.192"
                 }, 
                 {
-                    "endip": "10.223.78.127", 
+                    "endip": "10.208.8.75", 
                     "name": "z0p1", 
-                    "startip": "10.223.78.2", 
-                    "netmask": "255.255.255.128", 
+                    "startip": "10.208.8.70", 
+                    "netmask": "255.255.255.192", 
                     "clusters": [
                         {
                             "clustername": "z0p1c0", 
@@ -100,112 +100,32 @@
                                 {
                                     "username": "root", 
                                     "url": "http://acs-qa-h20", 
-                                    "password": "password"
+                                    "password": "vmops.com"
                                 }
                             ], 
                             "clustertype": "CloudManaged", 
                             "primaryStorages": [
                                 {
-                                    "url": "nfs://nfs2.lab.vmops.com:/export/home/automation/asf/primary2", 
+                                    "url": "nfs://nfs.lab.vmops.com:/export/home/automation/acs/primary2", 
                                     "name": "z0p1c0ps0"
                                 }
                             ]
                         }
                     ], 
-                    "gateway": "10.223.78.1"
+                    "gateway": "10.208.8.64"
                 }
             ], 
-            "internaldns1": "10.223.110.254", 
-            "internaldns2": "10.223.110.254", 
+            "internaldns1": "10.208.8.5", 
+            "internaldns2": "10.208.8.5", 
             "secondaryStorages": [
                 {
-                    "url": "nfs://nfs2.lab.vmops.com:/export/home/automation/asf/secondary"
-                }
-            ]
-        }, 
-        {
-            "name": "z1", 
-            "guestcidraddress": "10.1.1.0/24", 
-            "dns2": "8.8.8.8", 
-            "dns1": "8.8.8.8", 
-            "vlan": "2300-2349", 
-            "physical_networks": [
-                {
-                    "broadcastdomainrange": "Zone", 
-                    "name": "z1-pnet", 
-                    "traffictypes": [
-                        {
-                            "typ": "Guest"
-                        }, 
-                        {
-                            "typ": "Management"
-                        }, 
-                        {
-                            "typ": "Public"
-                        }
-                    ], 
-                    "providers": [
-                        {
-                            "broadcastdomainrange": "ZONE", 
-                            "name": "VirtualRouter"
-                        }, 
-                        {
-                            "broadcastdomainrange": "ZONE", 
-                            "name": "VpcVirtualRouter"
-                        }
-                    ]
-                }
-            ], 
-            "ipranges": [
-                {
-                    "startip": "10.223.158.130", 
-                    "endip": "10.223.158.254", 
-                    "netmask": "255.255.255.128", 
-                    "vlan": "581", 
-                    "gateway": "10.223.158.129"
-                }
-            ], 
-            "networktype": "Advanced", 
-            "pods": [
-                {
-                    "endip": "10.223.78.254", 
-                    "name": "z1p0", 
-                    "startip": "10.223.78.130", 
-                    "netmask": "255.255.255.128", 
-                    "clusters": [
-                        {
-                            "clustername": "z1p0c0", 
-                            "hypervisor": "KVM", 
-                            "hosts": [
-                                {
-                                    "username": "root", 
-                                    "url": "http://acs-qa-h21", 
-                                    "password": "password"
-                                }
-                            ], 
-                            "clustertype": "CloudManaged", 
-                            "primaryStorages": [
-                                {
-                                    "url": "nfs://nfs2.lab.vmops.com:/export/home/automation/asf/primary3", 
-                                    "name": "z1p0c0ps0"
-                                }
-                            ]
-                        }
-                    ], 
-                    "gateway": "10.223.78.129"
-                }
-            ], 
-            "internaldns1": "10.223.110.254", 
-            "internaldns2": "10.223.110.254", 
-            "secondaryStorages": [
-                {
-                    "url": "nfs://nfs2.lab.vmops.com:/export/home/automation/asf/secondary2"
+                    "url": "nfs://nfs.fmt.vmops.com:/export/home/automation/acs/secondary"
                 }
             ]
         }
     ], 
     "dbSvr": {
-        "dbSvr": "10.223.75.41", 
+        "dbSvr": "10.208.75.41", 
         "passwd": "cloud", 
         "db": "cloud", 
         "port": 3306, 
@@ -272,7 +192,7 @@
         }, 
         {
             "name": "secstorage.allowed.internal.sites", 
-            "value": "10.223.0.0/16"
+            "value": "10.208.0.0/22"
         }, 
         {
             "name": "check.pod.cidrs", 
@@ -281,7 +201,7 @@
     ], 
     "mgtSvr": [
         {
-            "mgtSvrIp": "10.223.75.41", 
+            "mgtSvrIp": "10.208.75.41", 
             "port": 8096
         }
     ]
