--- a/xen.cfg
+++ b/xen.cfg
@@ -99,7 +99,7 @@
                             "hosts": [
                                 {
                                     "username": "root", 
-                                    "url": "http://acs-qa-h20", 
+                                    "url": "http://apache-81-3", 
                                     "password": "vmops.com"
                                 }
                             ], 
