--- a/xen.properties
+++ b/xen.properties
@@ -76,7 +76,7 @@ z0p1.public.vlan.endip=10.208.8.100
 z0p1.public.netmask=255.255.255.192
 z0p1.public.vlan=2000
 
-z0p1c0h0.host=acs-qa-h20
+z0p1c0h0.host=apache-81-3
 
 z0p1c0ps0.primary.pool=nfs://nfs.lab.vmops.com:/export/home/automation/acs/primary2
 
