wrong mshost information

--- a/kvm.cfg
+++ b/kvm.cfg
@@ -125,7 +125,7 @@
         }
     ], 
     "dbSvr": {
-        "dbSvr": "10.208.75.41", 
+        "dbSvr": "cloudstack-centos63", 
         "passwd": "cloud", 
         "db": "cloud", 
         "port": 3306, 
@@ -201,7 +201,7 @@
     ], 
     "mgtSvr": [
         {
-            "mgtSvrIp": "10.208.75.41", 
+            "mgtSvrIp": "cloudstack-centos63", 
             "port": 8096
         }
     ]
