--- a/kvm.properties
+++ b/kvm.properties
@@ -37,8 +37,8 @@ dns1=8.8.8.8
 dns2=8.8.8.8
 internal_dns1=10.208.8.5
 internal_dns2=10.208.8.5
-mshost=10.208.75.41
-mysql.host=10.208.75.41
+mshost=cloudstack-centos63
+mysql.host=cloudstack-centos63
 mysql.cloud.user=cloud
 mysql.cloud.passwd=cloud
 [cloudstack]
