--- a/xen.cfg
+++ b/xen.cfg
@@ -64,12 +64,12 @@
                                 {
                                     "username": "root", 
                                     "url": "http://apache-81-3", 
-                                    "password": "vmops.com"
+                                    "password": "password"
                                 }, 
                                 {
                                     "username": "root", 
                                     "url": "http://apache-81-2", 
-                                    "password": "vmops.com"
+                                    "password": "password"
                                 }
                             ], 
                             "clustertype": "CloudManaged", 
@@ -100,7 +100,7 @@
                                 {
                                     "username": "root", 
                                     "url": "http://apache-83-1", 
-                                    "password": "vmops.com"
+                                    "password": "password"
                                 }
                             ], 
                             "clustertype": "CloudManaged", 
