some config changes for public vlans

--- a/xen.properties
+++ b/xen.properties
@@ -43,21 +43,21 @@ mysql.cloud.user=cloud
 mysql.cloud.passwd=cloud
 [cloudstack]
 hypervisor=XenServer
-host.password=vmops.com
+host.password=password
 
 #Zone 1
 z0.zone.vlan=2001-2050
 
-z0p0.private.gateway=10.208.8.64
+z0p0.private.gateway=10.208.8.65
 z0p0.private.pod.startip=10.208.8.70
 z0p0.private.pod.endip=10.208.8.75
 z0p0.private.netmask=255.255.255.192
 
-z0p0.public.gateway=10.208.8.1
-z0p0.public.vlan.startip=10.208.8.76
-z0p0.public.vlan.endip=10.208.8.100
+z0p0.public.gateway=10.208.10.129
+z0p0.public.vlan.startip=10.208.8.130
+z0p0.public.vlan.endip=10.208.8.170
 z0p0.public.netmask=255.255.255.192
-z0p0.public.vlan=113
+z0p0.public.vlan=102
 
 z0p0c0h0.host=apache-81-3
 z0p0c0h1.host=apache-81-2
@@ -65,16 +65,16 @@ z0p0c0h1.host=apache-81-2
 z0p0c0ps0.primary.pool=nfs://nfs.fmt.vmops.com:/export/automation/acs/primary
 z0p0c0ps1.primary.pool=nfs://nfs.fmt.vmops.com:/export/automation/acs/primary1
 
-z0p1.private.gateway=10.208.8.192
+z0p1.private.gateway=10.208.8.193
 z0p1.private.pod.startip=10.208.8.200
 z0p1.private.pod.endip=10.208.8.205
 z0p1.private.netmask=255.255.255.192
 
-z0p1.public.gateway=10.208.8.1
-z0p1.public.vlan.startip=10.208.8.206
-z0p1.public.vlan.endip=10.208.8.250
+z0p1.public.gateway=10.208.10.193
+z0p1.public.vlan.startip=10.208.10.206
+z0p1.public.vlan.endip=10.208.10.250
 z0p1.public.netmask=255.255.255.192
-z0p1.public.vlan=113
+z0p1.public.vlan=103
 
 z0p1c0h0.host=apache-83-1
 
