vlan for guests is part of phyy. networks

--- a/kvm.properties
+++ b/kvm.properties
@@ -46,7 +46,7 @@ hypervisor=KVM
 host.password=password
 
 #Zone 1
-z0.zone.vlan=2001-2050
+z0.guest.vlan=2001-2050
 
 z0p0.private.gateway=10.208.8.65
 z0p0.private.pod.startip=10.208.8.70
