multiple subnets via comma separation

--- a/kvm.properties
+++ b/kvm.properties
@@ -31,7 +31,7 @@ instance.name=QA
 direct.agent.load.size=1000
 default.page.size=10000
 check.pod.cidrs=true
-secstorage.allowed.internal.sites=10.208.8.0/24
+secstorage.allowed.internal.sites=10.208.8.0/26,10.208.8.65/26,10.208.8.128/26,10.208.8.192/26
 [environment]
 dns1=8.8.8.8
 dns2=8.8.8.8
