nfs needs to be allowed since it's in a diff't subnet

--- a/kvm.cfg
+++ b/kvm.cfg
@@ -192,7 +192,7 @@
         }, 
         {
             "name": "secstorage.allowed.internal.sites", 
-            "value": "10.208.8.0/26,10.208.8.65/26,10.208.8.128/26,10.208.8.192/26"
+            "value": "10.208.8.0/26,10.208.8.65/26,10.208.8.128/26,10.208.8.192/26,10.208.13.194/32"
         }, 
         {
             "name": "check.pod.cidrs", 
