including network.gc interval

--- a/kvm.cfg
+++ b/kvm.cfg
@@ -155,8 +155,8 @@
             "value": "10000"
         }, 
         {
-            "name": "instance.name", 
-            "value": "QA"
+            "name": "account.cleanup.interval", 
+            "value": "120"
         }, 
         {
             "name": "workers", 
@@ -167,7 +167,7 @@
             "value": "5"
         }, 
         {
-            "name": "account.cleanup.interval", 
+            "name": "network.gc.interval", 
             "value": "120"
         }, 
         {
@@ -185,6 +185,10 @@
         {
             "name": "expunge.interval", 
             "value": "60"
+        }, 
+        {
+            "name": "instance.name", 
+            "value": "QA"
         }, 
         {
             "name": "expunge.workers", 
