--- a/xen.properties
+++ b/xen.properties
@@ -22,6 +22,7 @@ expunge.delay=60
 expunge.interval=60
 storage.cleanup.interval=120
 account.cleanup.interval=120
+network.gc.interval=120
 expunge.workers=3
 workers=10
 vm.allocation.algorithm=random
