Fixing the isolation methods
Signed-off-by: Prasanna Santhanam <tsp@apache.org>

--- a/xen.cfg
+++ b/xen.cfg
@@ -7,9 +7,23 @@
             "dns1": "8.8.8.8", 
             "physical_networks": [
                 {
+                    "name": "z0-pnet", 
+                    "providers": [
+                        {
+                            "broadcastdomainrange": "ZONE", 
+                            "name": "VirtualRouter"
+                        }, 
+                        {
+                            "broadcastdomainrange": "ZONE", 
+                            "name": "VpcVirtualRouter"
+                        },  
+                        {   
+                            "broadcastdomainrange": "ZONE", 
+                            "name": "InternalLbVm"
+                        }  
+                    ], 
                     "broadcastdomainrange": "Zone", 
                     "vlan": "2001-2050", 
-                    "name": "z0-pnet", 
                     "traffictypes": [
                         {
                             "typ": "Guest"
@@ -21,16 +35,10 @@
                             "typ": "Public"
                         }
                     ], 
-                    "providers": [
-                        {
-                            "broadcastdomainrange": "ZONE", 
-                            "name": "VirtualRouter"
-                        }, 
-                        {
-                            "broadcastdomainrange": "ZONE", 
-                            "name": "VpcVirtualRouter"
-                        }
-                    ]
+                    "isolationmethods": [
+                        "VLAN"
+                    ],  
+                    "securitygroupenabled": "false"
                 }
             ], 
             "ipranges": [
