add global config for scaling
enabled to true by default

Signed-off-by: Prasanna Santhanam <tsp@apache.org>

--- a/xen.cfg
+++ b/xen.cfg
@@ -16,11 +16,11 @@
                         {
                             "broadcastdomainrange": "ZONE", 
                             "name": "VpcVirtualRouter"
-                        },  
-                        {   
+                        }, 
+                        {
                             "broadcastdomainrange": "ZONE", 
                             "name": "InternalLbVm"
-                        }  
+                        }
                     ], 
                     "broadcastdomainrange": "Zone", 
                     "vlan": "2001-2050", 
@@ -37,10 +37,10 @@
                     ], 
                     "isolationmethods": [
                         "VLAN"
-                    ],  
-                    "securitygroupenabled": "false"
+                    ]
                 }
             ], 
+            "securitygroupenabled": "false", 
             "ipranges": [
                 {
                     "startip": "10.208.10.10", 
@@ -193,6 +193,10 @@
         {
             "name": "expunge.interval", 
             "value": "60"
+        }, 
+        {
+            "name": "enable.dynamic.scale.vm", 
+            "value": "true"
         }, 
         {
             "name": "instance.name", 
