--- a/kvm.properties
+++ b/kvm.properties
@@ -33,6 +33,7 @@ direct.agent.load.size=1000
 default.page.size=10000
 check.pod.cidrs=true
 secstorage.allowed.internal.sites=10.208.8.0/26,10.208.8.65/26,10.208.8.128/26,10.208.8.192/26,10.208.13.194/32
+enable.dynamic.scale.vm=true
 [environment]
 dns1=8.8.8.8
 dns2=8.8.8.8
