--- a/xen.cfg
+++ b/xen.cfg
@@ -127,7 +127,8 @@
             "internaldns2": "10.208.8.5", 
             "secondaryStorages": [
                 {
-                    "url": "nfs://nfs.fmt.vmops.com:/export/automation/acs/secondary"
+                    "url": "nfs://nfs.fmt.vmops.com:/export/automation/acs/secondary", 
+                    "provider": "NFS"
                 }
             ]
         }
