--- a/xen.cfg
+++ b/xen.cfg
@@ -40,6 +40,16 @@
                     ]
                 }
             ], 
+            "cacheStorages": [
+                {
+                    "url": "nfs://nfs.fmt.vmops.com:/export/automation/acs/objectstorecache", 
+                    "details": {
+                        "url": "nfs://nfs.fmt.vmops.com:/export/automation/acs/objectstorecache", 
+                        "__name__": "cachestorage"
+                    }, 
+                    "provider": "NFS"
+                }
+            ], 
             "securitygroupenabled": "false", 
             "ipranges": [
                 {
@@ -127,8 +137,19 @@
             "internaldns2": "10.208.8.5", 
             "secondaryStorages": [
                 {
-                    "url": "nfs://nfs.fmt.vmops.com:/export/automation/acs/secondary", 
-                    "provider": "NFS"
+                    "details": {
+                        "maxerrorretry": "0", 
+                        "name": "acstest-objectstore", 
+                        "usehttps": "true", 
+                        "accesskey": "ACCESS_KEY", 
+                        "bucket": "acstest.cloudstack.org", 
+                        "secretkey": "SECRET_KEY", 
+                        "endpoint": "s3.amazonaws.com", 
+                        "connectiontimeout": "300000", 
+                        "__name__": "objectstore"
+                    }, 
+                    "name": "acstest-objectstore", 
+                    "provider": "S3"
                 }
             ]
         }
