network.gc.wait and interval reduced to 60s
Signed-off-by: Prasanna Santhanam <tsp@apache.org>

--- a/kvm.cfg
+++ b/kvm.cfg
@@ -173,6 +173,10 @@
     ], 
     "globalConfig": [
         {
+            "name": "network.gc.wait", 
+            "value": "60"
+        }, 
+        {
             "name": "storage.cleanup.interval", 
             "value": "120"
         }, 
@@ -198,7 +202,7 @@
         }, 
         {
             "name": "network.gc.interval", 
-            "value": "120"
+            "value": "60"
         }, 
         {
             "name": "guest.domain.suffix", 
