Revert "default to object store"
This reverts commit 1aa70bd071b9fb5ee4ec3867fff422a6584a4d65.

--- a/kvm.properties
+++ b/kvm.properties
@@ -22,8 +22,7 @@ expunge.delay=60
 expunge.interval=60
 storage.cleanup.interval=120
 account.cleanup.interval=120
-network.gc.interval=60
-network.gc.wait=60
+network.gc.interval=120
 expunge.workers=3
 workers=10
 vm.allocation.algorithm=random
@@ -83,15 +82,5 @@ z0p1c0h0.host=apache-83-1
 
 z0p1c0ps0.primary.pool=nfs://nfs.fmt.vmops.com:/export/automation/acs/primary2
 
-[objectstore]
-name=acstest-objectstore
-accesskey=ACCESS_KEY
-secretkey=SECRET_KEY
-bucket=acstest.cloudstack.org
-connectiontimeout=300000
-usehttps=true
-maxerrorretry=0
-endpoint=s3.amazonaws.com
 
-[cachestorage]
-url=nfs://nfs.fmt.vmops.com:/export/automation/acs/objectstorecache
+z0.secondary.pool=nfs://nfs.fmt.vmops.com:/export/automation/acs/secondary
