network.gc and vminstance name flags
Signed-off-by: Prasanna Santhanam <tsp@apache.org>

--- a/xen.cfg
+++ b/xen.cfg
@@ -184,6 +184,10 @@
             "value": "60"
         }, 
         {
+            "name": "vm.instancename.flag", 
+            "value": "true"
+        }, 
+        {
             "name": "guest.domain.suffix", 
             "value": "sandbox.xen"
         }, 
