--- a/xen.properties
+++ b/xen.properties
@@ -22,10 +22,12 @@ expunge.delay=60
 expunge.interval=60
 storage.cleanup.interval=120
 account.cleanup.interval=120
-network.gc.interval=120
+network.gc.interval=60
+network.gc.wait=60
 expunge.workers=3
 workers=10
 vm.allocation.algorithm=random
+vm.instancename.flag=true
 vm.op.wait.interval=5
 guest.domain.suffix=sandbox.xen
 instance.name=QA
