--- a/kvm.cfg
+++ b/kvm.cfg
@@ -212,6 +212,10 @@
             "value": "3"
         }, 
         {
+            "name": "kvm.snapshot.enabled", 
+            "value": "true"
+        }, 
+        {
             "name": "secstorage.allowed.internal.sites", 
             "value": "10.208.8.0/26,10.208.8.65/26,10.208.8.128/26,10.208.8.192/26,10.208.13.194/32"
         }, 
