--- a/kvm.properties
+++ b/kvm.properties
@@ -35,6 +35,7 @@ default.page.size=10000
 check.pod.cidrs=true
 secstorage.allowed.internal.sites=10.208.8.0/26,10.208.8.65/26,10.208.8.128/26,10.208.8.192/26,10.208.13.194/32
 enable.dynamic.scale.vm=true
+kvm.snapshot.enabled=true
 [environment]
 dns1=8.8.8.8
 dns2=8.8.8.8
