KVM.snapshot.enabled is uppercase in hypervisor
Signed-off-by: Prasanna Santhanam <tsp@apache.org>

--- a/kvm.cfg
+++ b/kvm.cfg
@@ -212,7 +212,7 @@
             "value": "3"
         }, 
         {
-            "name": "kvm.snapshot.enabled", 
+            "name": "KVM.snapshot.enabled", 
             "value": "true"
         }, 
         {
