--- a/kvm.cfg
+++ b/kvm.cfg
@@ -227,6 +227,8 @@
     "mgtSvr": [
         {
             "mgtSvrIp": "cloudstack-centos63", 
+            "user": "root",
+            "passwd": "password",
             "port": 8096
         }
     ]
