--- a/xen.cfg
+++ b/xen.cfg
@@ -223,6 +223,8 @@
     "mgtSvr": [
         {
             "mgtSvrIp": "cloudstack-centos63", 
+            "user": "root",
+            "passwd": "password",
             "port": 8096
         }
     ]
