host value in global config defaults to localhost
Signed-off-by: Prasanna Santhanam <tsp@apache.org>

--- a/kvm.cfg
+++ b/kvm.cfg
@@ -152,6 +152,10 @@
     ], 
     "globalConfig": [
         {
+            "name": "host", 
+            "value": "cloudstack-centos63"
+        }, 
+        {
             "name": "network.gc.wait", 
             "value": "60"
         }, 
