--- a/xen.cfg
+++ b/xen.cfg
@@ -152,6 +152,10 @@
     ], 
     "globalConfig": [
         {
+            "name": "host", 
+            "value": "cloudstack-centos63"
+        }, 
+        {
             "name": "network.gc.wait", 
             "value": "60"
         }, 
