update the config file to conform to marvin logging changes Signed-off-by: SrikanteswaraRao Talluri <talluri@apache.org>

--- a/asf_test.cfg
+++ b/asf_test.cfg
@@ -85,16 +85,9 @@
         "port": 3306, 
         "user": "cloud"
     }, 
-    "logger": [
-        {
-            "name": "TestClient", 
-            "file": "/var/log/testclient.log"
-        }, 
-        {
-            "name": "TestCase", 
-            "file": "/var/log/testcase.log"
-        }
-    ], 
+    "logger":{
+               "LogFolderPath": "/tmp/"
+    },
     "globalConfig": [
         {
             "name": "storage.cleanup.interval", 
