temporary workaround to unblock test runs.
Until the script to add xenserver pool is added with multiple hosts before adding to cloudstack, i am disabling the addition of second host in the xen pool

--- a/xen.cfg
+++ b/xen.cfg
@@ -69,11 +69,11 @@
                             "clustername": "z0p0c0", 
                             "hypervisor": "XenServer", 
                             "hosts": [
-                                {
-                                    "username": "root", 
-                                    "url": "http://apache-81-3", 
-                                    "password": "password"
-                                }, 
+                               # {
+                                #    "username": "root", 
+                                 #   "url": "http://apache-81-3", 
+                                  #  "password": "password"
+                                #}, 
                                 {
                                     "username": "root", 
                                     "url": "http://apache-81-2", 
